# all-ai-agents-eval

./: .gitignore  Makefile  README.md  create-agent-app.code-workspace  pyproject.toml
agno_example/: customer_support_agent.py  pyproject.toml
create_agent_app/common/cutomer_support/: mocked_apis.py
create_agent_app/common/cutomer_support/knowledge_base/: company_policy.md  troubleshooting_ecommerce.md  troubleshooting_internet.md  troubleshooting_mobile.md  troubleshooting_television.md
dspy_example/: customer_support_agent.py  pyproject.toml
google_adk_example/: customer_support_agent.py  pyproject.toml
inspect_ai_example/: customer_support_agent.py  pyproject.toml
inspect_ai_example/tests/: test_customer_support_agent.py
langgraph_functional_api_example/: customer_support_agent.py  pyproject.toml
langgraph_highlevel_api_example/: customer_support_agent.py  pyproject.toml
no_framework_example/: customer_support_agent.py  pyproject.toml
pydantic_ai_example/: customer_support_agent.py  pyproject.toml
pydantic_ai_example/tests/: test_customer_support_agent.py
smolagents_example/: customer_support_agent.py  pyproject.toml
smolagents_example/tests/: test_customer_support_agent.py
