[project]
name = "inspect-ai-example"
version = "0.1.0"
description = "Inspect AI example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "create-agent-app",
    "google-genai>=1.11.0",
    "inspect-ai>=0.3.89",
    "langwatch-scenario>=0.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
create-agent-app = { path = "../", editable = true }
