[project]
name = "langgraph-highlevel-api-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "create-agent-app",
    "langchain>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.3.31",
    "langwatch-scenario>=0.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
create-agent-app = { path = "../", editable = true }
